<resources>
    <string name="app_name">Lose 2 Gain</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lose to Gain management</string>
    <string name="nav_header_subtitle">www.losetogainbd.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="client_follow_up">Client Follow Up:</string>
    <string name="you_have_to_take_follow_up_report_from_this_client">You Have TO Take Follow Up Report From This Client</string>
    <string name="client_id">Client Id:</string>
    <string name="client_name">Client Name:</string>
    <string name="last_follow_up_date">Last Follow Up Date:</string>
    <string name="check_button">Check</string>
    <string name="add_a_client">Add A Client</string>
    <string name="Foods">Food Database</string>
    <string name="make_a_diet_chart">Make a Diet Chart</string>
    <string name="client_database">Client Database</string>
    <string name="bill_creation">Bill Creation</string>
    <string name="monthly_income">Monthly Income</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Food Items</string>
    <string name="menu_slideshow">Client Database</string>
    <string name="menu_tools">Make a Diet Chart</string>
    <string name="menu_share">Bill Creation</string>
    <string name="menu_send">About</string>
    <string name="management">Management</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No</string>
    <string name="occupation">Occupation</string>
    <string name="address">Address</string>
    <string name="height">Height</string>
    <string name="sex">Sex</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="food_allergic">Food Allergic</string>
    <string name="food_favourite">Food Favourite</string>
    <string name="food_preferred">Food Preferred</string>
    <string name="medical_problems">Medical Problems :</string>
    <string name="packages">Packages :</string>
    <string name="_12_weeks">12 Weeks</string>
    <string name="_24_weeks">24 Weeks</string>
    <string name="measurement">Measurement :</string>
    <string name="waist">Waist</string>
    <string name="wrist">Wrist</string>
    <string name="bust_chest">Bust/Chest</string>
    <string name="hip">Hip</string>
    <string name="forearm">Forearm</string>
    <string name="bicep_arm_l">Bicep/Arm(L)</string>
    <string name="bicep_arm_r">Bicep/Arm(R)</string>
    <string name="thigh_l">Thigh(L)</string>
    <string name="thigh_r">Thigh(R)</string>


    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="todo">TODO</string>
    <string name="choose_client_picture">Choose Client Picture</string>
    <string name="add_client">Add Client</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="client_added_date">Client Added Date</string>
    <string name="comma">,</string>
    <string name="next_follow_up_date">Next Follow up Date:</string>
    <string name="additional_information">Additional Information:</string>
    <string name="please_select_last_follow_up_date">Please Select Last Follow up Date</string>


    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="sex_bangla">
        <item>পুরুষ</item>
        <item>মহিলা</item>
    </string-array>
</resources>
