<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medical_problems"
        android:textSize="18sp"
        android:textColor="@color/color_monthly_income"
        android:background="@drawable/bottom_border"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:layout_marginBottom="2dp"
        android:paddingBottom="5dp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="6dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_preferred"
            android:textSize="16sp"
            android:textColor="@color/color_monthly_income"
            android:textStyle="bold"
            android:gravity="center_vertical">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_food_preferred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_background"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_allergic"
            android:textSize="16sp"
            android:textColor="@color/color_monthly_income"
            android:textStyle="bold"
            android:gravity="center_vertical">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_food_allergic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_background"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="6dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_favourite"
            android:textSize="16sp"
            android:textColor="@color/color_monthly_income"
            android:textStyle="bold"
            android:gravity="center_vertical">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_food_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_background"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_added_date"
            android:textSize="16sp"
            android:textColor="@color/color_monthly_income"
            android:textStyle="bold"
            android:gravity="center_vertical">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_client_added_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_background"
                android:inputType="date"
                android:focusable="false">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/packages"
            android:textSize="18sp"
            android:textColor="@color/color_monthly_income"
            android:textStyle="bold"
            android:gravity="center_vertical">

        </TextView>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checkedButton="@id/package_12">

            <RadioButton
                android:id="@+id/package_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12_weeks"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/color_monthly_income">

            </RadioButton>

            <RadioButton
                android:id="@+id/package_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_24_weeks"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/color_monthly_income">

            </RadioButton>


        </RadioGroup>


    </LinearLayout>





</LinearLayout>