<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    >

    <RelativeLayout
        android:padding="4dp"
        android:layout_width="match_parent"
        android:background="@drawable/quick_notification_section"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/client_follow_up"
            android:gravity="center_horizontal"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:textSize="13sp">
        </TextView>

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have_to_take_follow_up_report_from_this_client"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txt1"
            android:gravity="center_horizontal"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:textSize="13sp">
        </TextView>


        <LinearLayout
            android:id="@+id/Linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/txt2"
            android:layout_alignStart="@+id/txt2"
            android:layout_marginTop="6dp"
            android:layout_alignLeft="@+id/txt2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client_id"
                android:textColor="@color/color_white"
                android:textStyle="bold"
                android:textSize="13sp">

            </TextView>

            <TextView
                android:id="@+id/quick_clint_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:textStyle="bold"
                android:textSize="13sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/Linear1"
            android:layout_alignStart="@+id/txt2"
            android:layout_alignLeft="@+id/txt2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client_name"
                android:textColor="@color/color_white"
                android:textStyle="bold"
                android:textSize="13sp">

            </TextView>

            <TextView

                android:id="@+id/quick_clint_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:textStyle="bold"
                android:textSize="13sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/linear2"
            android:layout_alignStart="@+id/txt2"
            android:layout_alignLeft="@+id/txt2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_follow_up_date"
                android:textColor="@color/color_white"
                android:textStyle="bold"
                android:textSize="13sp">

            </TextView>

            <TextView
                android:id="@+id/quick_follow_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:textStyle="bold"
                android:textSize="13sp">

            </TextView>

        </LinearLayout>

        <Button
            android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
            android:id="@+id/check_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear3"
            android:layout_alignParentEnd="true"
            android:text="@string/check_button"
            android:drawableTint="@color/color_white"
            android:background="@drawable/transparent_background"
            android:textColor="@color/color_white"
            android:layout_marginEnd="15dp"
            android:textStyle="bold"
            android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp">

        </Button>
    </RelativeLayout>



</RelativeLayout>