<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_details"
        android:textSize="18sp"
        android:textColor="@color/color_monthly_income"
        android:background="@drawable/bottom_border"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:layout_marginBottom="2dp"
        android:paddingBottom="5dp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="6dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textColor="@color/color_monthly_income"
            android:textStyle="bold"
            android:gravity="center_vertical">

        </TextView>

        <TextView
            android:id="@+id/details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_background"
            android:gravity="center_vertical"
            android:textSize="16sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/occupation"
            android:textSize="16sp"
            android:textColor="@color/color_monthly_income"
            android:textStyle="bold"
            android:gravity="center_vertical">

        </TextView>

        <TextView
            android:id="@+id/details_occupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_background"
            android:gravity="center_vertical"
            android:textSize="16sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="6dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_no"
            android:textSize="16sp"
            android:textColor="@color/color_monthly_income"
            android:textStyle="bold"
            android:gravity="center_vertical">

        </TextView>

        <TextView
            android:id="@+id/details_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_background"
            android:gravity="center_vertical"
            android:textSize="16sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="@color/color_monthly_income"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

        </TextView>

        <TextView
            android:id="@+id/details_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_background"
            android:gravity="center_vertical"
            android:textSize="16sp">

        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textSize="16sp"
                android:textColor="@color/color_monthly_income"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">

            </TextView>

            <TextView
                android:id="@+id/details_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_background"
                android:gravity="center_vertical"
                android:textSize="16sp">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="16sp"
                android:textColor="@color/color_monthly_income"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">

            </TextView>

            <TextView
                android:id="@+id/details_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_background"
                android:gravity="center_vertical"
                android:textSize="16sp">

            </TextView>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="16sp"
                android:textColor="@color/color_monthly_income"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">

            </TextView>

            <TextView
                android:id="@+id/details_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_background"
                android:gravity="center_vertical"
                android:textSize="16sp">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="16sp"
                android:textColor="@color/color_monthly_income"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">

            </TextView>

            <TextView
                android:id="@+id/details_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_background"
                android:gravity="center_vertical"
                android:textSize="16sp">
            </TextView>


        </LinearLayout>

    </LinearLayout>



</LinearLayout>